--- a/package.json
+++ b/package.json
@@ -20,6 +20,9 @@
     "@angular/router": "^17.0.0",
     "bootstrap": "^5.3.2",
     "bootstrap-icons": "^1.11.3",
+    "bxslider": "^4.2.14",
+    "jquery": "^3.7.1",
+    "ngx-owl-carousel-o": "^17.0.0",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0",
     "zone.js": "~0.14.2"
@@ -29,6 +32,7 @@
     "@angular/cli": "^17.0.6",
     "@angular/compiler-cli": "^17.0.0",
     "@types/jasmine": "~5.1.0",
+    "@types/jquery": "^3.5.29",
     "jasmine-core": "~5.1.0",
     "karma": "~6.4.0",
     "karma-chrome-launcher": "~3.2.0",
