--- a/package.json
+++ b/package.json
@@ -18,9 +18,11 @@
     "@angular/platform-browser": "^17.0.0",
     "@angular/platform-browser-dynamic": "^17.0.0",
     "@angular/router": "^17.0.0",
+    "angular-chart.js": "^1.1.1",
     "bootstrap": "^5.3.2",
     "bootstrap-icons": "^1.11.3",
     "bxslider": "^4.2.14",
+    "chart.js": "^4.4.1",
     "jquery": "^3.7.1",
     "ngx-owl-carousel-o": "^17.0.0",
     "rxjs": "~7.8.0",
