--- a/package.json
+++ b/package.json
@@ -21,10 +21,12 @@
     "@angular/platform-browser-dynamic": "^17.0.0",
     "@angular/router": "^17.0.0",
     "angular-chart.js": "^1.1.1",
+    "angular-highcharts": "^17.0.0",
     "bootstrap": "^5.3.2",
     "bootstrap-icons": "^1.11.3",
     "bxslider": "^4.2.14",
     "chart.js": "^4.4.1",
+    "highcharts": "^11.3.0",
     "jquery": "^3.7.1",
     "ngx-owl-carousel-o": "^17.0.0",
     "rxjs": "~7.8.0",
