dark mode works

--- a/angular.json
+++ b/angular.json
@@ -29,6 +29,7 @@
               "node_modules/bootstrap/dist/css/bootstrap.min.css",
               "node_modules/bootstrap-icons/font/bootstrap-icons.min.css",
               "node_modules/bxslider/dist/jquery.bxslider.css",
+              "node_modules/angular-calendar/css/angular-calendar.css",
               "src/styles.css"
             ],
             "scripts": [
